# VehicleClients

./: .gitignore
VehicleClientProj/: CMakeLists.txt  CMakePresets.json  CameraThreadManager.cpp  CameraThreadManager.h  PerceptionDeviceManager.cpp  PerceptionDeviceManager.h  main.cpp
VehicleClientProjV1.0/: CMakeLists.txt  CMakePresets.json  CameraThreadManager.cpp  CameraThreadManager.h  PerceptionDeviceManager.cpp  PerceptionDeviceManager.h  VehicleClientProjV1.0  main.cpp
